welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:16: error: not found: value dogHouse
		dogHouse();
                ^MethodsDogHouse:22: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:32: error: not found: value dogHouse
		dogHouse();		
                ^MethodsDogHouse:42: error: not found: value dogHouse
		dogHouse();		
                ^