welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def doghouse() {
	baisseBrosse();
	for (i <- 0 to 3) {
		avance(2);
		gauche();
	}
	leveBrosse();
}
